--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <canvas id="canvas" width="288" height="512"></canvas>
-    <script src="app.js"></script>
+    <canvas id="canvas" width="288" height="512"></canvas> <!-- Игра -->
+    <script src="app.js"></script> <!-- Скрипт -->
 </body>
 
 </html>
